# teamcity-bazel-plugin

./: .gitignore  .gitmodules  CHANGELOG.md  DEVELOPMENT.md  LICENSE  MAINTAINERSHIP.md  README.md  build.gradle  build.gradle.kts  external_repos_checkout.cmd  gradlew  settings.gradle  settings.gradle.kts
.teamcity/: pom.xml  settings.kts
bazel-build/: build.gradle  build.gradle.kts
gradle/: libs.versions.toml
kotlin-dsl/: BazelBuild.xml  BazelBuildFeature.xml  BazelBuildStep.xml  BazelClean.xml  BazelRun.xml  BazelTest.xml  docker-wrapper-addon.xml
plugin-bazel-agent/: build.gradle  build.gradle.kts
plugin-bazel-common/: build.gradle
plugin-bazel-event-service/: build.gradle  build.gradle.kts
plugin-bazel-event-service/src/main/proto/: action_cache.proto  build_event_stream.proto  build_events.proto  build_status.proto  command_line.proto  failure_details.proto  option_filters.proto  package_load_metrics.proto  publish_build_event.proto
plugin-bazel-inegration-tests/: build.gradle
plugin-bazel-inegration-tests/samples/JavaTests/: BUILD  WORKSPACE
plugin-bazel-inegration-tests/src/test/resources/: FlakyTests.feature  JavaTests.feature
plugin-bazel-integration-tests/: build.gradle  build.gradle.kts
plugin-bazel-integration-tests/samples/FlakyTests/: BUILD  MODULE.bazel
plugin-bazel-integration-tests/samples/JavaTests/: MODULE.bazel
plugin-bazel-integration-tests/src/test/resources/: FlakyTests.feature  JavaTests.feature
plugin-bazel-server/: build.gradle  build.gradle.kts  teamcity-plugin.xml
(+470 files in other folders)
